...
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/quarter_input"
        android:layout_width="285dp"
        android:layout_height="26dp"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toStartOf="@+id/year_input"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/subject_input"
        android:layout_width="82dp"
        android:layout_height="39dp"
        android:layout_marginTop="272dp"
        android:ems="10"
        android:hint="@string/cse"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/quarter_input"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course_nbr_input"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginTop="324dp"
        android:ems="10"
        android:hint="@string/_110"
        android:inputType="textPersonName"
...
        android:layout_marginTop="280dp"
        android:text="@string/subject"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="52dp"
        android:onClick="onDoneClicked"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_btn" />

    <Spinner
        android:id="@+id/year_input"
        android:layout_width="285dp"
        android:layout_height="26dp"
        android:layout_marginStart="60dp"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="52dp"
        android:onClick="onEnterClicked"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_size_input" />

    <Spinner
        android:id="@+id/class_size_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
...
