...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@drawable/button_text_color"
        android:onClick="onStartStopClicked"
...
        android:layout_marginTop="76dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/sort_text"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:onClick="onFavoriteButtonClicked"
        android:text="FAVORITES"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toEndOf="@+id/add_mock"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
...
